--- a/cloud/setup.yml
+++ b/cloud/setup.yml
@@ -274,42 +274,51 @@ controller_workflows:
         unified_job_template: Cloud | AWS | VPC Report
         all_parents_must_converge: true
         always_nodes:
-          - Deploy Windows GUI Blueprint
-          - Deploy RHEL8 Blueprint
-          - Deploy RHEL9 Blueprint
-          - Deploy Windows Core Blueprint
-          - Deploy Report Server
-      - identifier: Deploy Windows GUI Blueprint
+          - Deploy RHEL9_1 Blueprint
+          - Deploy RHEL9_2 Blueprint
+          - Deploy RHEL9_3 Blueprint
+          - Deploy RHEL9_4 Blueprint
+          - Deploy RHEL9_5 Blueprint
+      - identifier: Deploy RHEL9_1 Blueprint
         unified_job_template: Cloud | AWS | Create VM
         extra_data:
-          create_vm_vm_name: aws-dc
-          vm_blueprint: windows_full
+          create_vm_vm_name: aws_rhel9_1
+          vm_blueprint: rhel9
         success_nodes:
           - Update Inventory
         failure_nodes:
           - Ticket - Instance Failed
-      - identifier: Deploy Windows Core Blueprint
+      - identifier: Deploy RHEL9_2 Blueprint
         unified_job_template: Cloud | AWS | Create VM
         extra_data:
-          create_vm_vm_name: aws_win1
-          vm_blueprint: windows_core
+          create_vm_vm_name: aws_rhel9_2
+          vm_blueprint: rhel9
         success_nodes:
           - Update Inventory
         failure_nodes:
           - Ticket - Instance Failed
-      - identifier: Deploy RHEL8 Blueprint
+      - identifier: Deploy RHEL9_3 Blueprint
         unified_job_template: Cloud | AWS | Create VM
         extra_data:
-          create_vm_vm_name: aws_rhel8
-          vm_blueprint: rhel8
+          create_vm_vm_name: aws_rhel9_3
+          vm_blueprint: rhel9
         success_nodes:
           - Update Inventory
         failure_nodes:
           - Ticket - Instance Failed
-      - identifier: Deploy RHEL9 Blueprint
+      - identifier: Deploy RHEL9_4 Blueprint
         unified_job_template: Cloud | AWS | Create VM
         extra_data:
-          create_vm_vm_name: aws_rhel9
+          create_vm_vm_name: aws_rhel9_4
+          vm_blueprint: rhel9
+        success_nodes:
+          - Update Inventory
+        failure_nodes:
+          - Ticket - Instance Failed
+      - identifier: Deploy RHEL9_5 Blueprint
+        unified_job_template: Cloud | AWS | Create VM
+        extra_data:
+          create_vm_vm_name: aws_rhel9_5
           vm_blueprint: rhel9
         success_nodes:
           - Update Inventory
